# DeepResearch-MultiAgent

./: README.md
DeepResearch-MultiAgent/: README.md  pyproject.toml  requirements.txt
DeepResearch-MultiAgent/config/: default_config.yaml  settings.py
DeepResearch-MultiAgent/scripts/: run_daily_task.py
DeepResearch-MultiAgent/src/: main.py
DeepResearch-MultiAgent/src/agents/: __init__.py  base_agent.py  debate_agent.py  deep_parsing_agent.py  meta_agent.py  retrieval_agent.py
DeepResearch-MultiAgent/src/knowledge_graph/: __init__.py  graph_manager.py  neo4j_client.py  trend_detector.py
DeepResearch-MultiAgent/src/llm/: __init__.py  deepseek_client.py  provider.py  token_tracker.py
DeepResearch-MultiAgent/src/models/: __init__.py  paper.py  schema.py
DeepResearch-MultiAgent/src/retrieval/: __init__.py  arxiv_fetcher.py  embedding.py  semantic_scholar.py
DeepResearch-MultiAgent/src/utils/: __init__.py  helpers.py  logger.py
DeepResearch-MultiAgent/tests/: test_agents.py
